--- a/app/globals.css
+++ b/app/globals.css
@@ -28,5 +28,9 @@
   .hover\:lightHover:hover {
     background-color: #fcf4ff;
   }
+
+  .autoGrid {
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
 }
 
