--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,10 @@
 @import 'tailwindcss';
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 *{
   font-family: Outfit, sans-serif;
-} 
+}
 
 @layer utilities {
   .font-outfit {
@@ -13,24 +15,15 @@
     font-family: var(--font-ovo);
   }
 
-  .lightHover {
-    background-color: #fcf4ff;
-  }
-
-  .darkHover {
-    background-color: #11001F;
-  }
-
-  .darkTheme {
-    background-color: #11001F;
-  }
-
   .hover\:lightHover:hover {
     background-color: #fcf4ff;
+  }
+
+  .hover\:darkHover:hover {
+    background-color: #2a004a;
   }
 
   .autoGrid {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
 }
-
